# tg-if

./: .dockerignore  .env.dev  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  ALL_SETUP.md  CHANGELOG.md  Dockerfile  Hybrid approach.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.agent/: acceptance_criteria.md  backlog.md  hld-alignment-report.md  media-retrieval-roadmap.md
.github/workflows/: ci.yml
config/: bots.example.json  bots.json
doc/: ALL_SETUP.md  Data_Structures.md  Hybrid approach.md  architecture_overview.md  chat_export.md  media_retrieval.md  monitor_cmds.md  rabbitmq_setup.md  setup_esp.md  subscriber_interface.md  subscriber_media_interface_esp.md
doc/subsystems/: app.md  domain.md  infra.md
src/app/: __init__.py  admin_commands.py  admin_notifier.py  bot_command_registry.py  chat_exporter.py  event_dispatcher.py  log_buffer.py  media_config.py  media_downloader.py  metrics.py  receiver_service.py  response_consumer.py  subscriber_command_handler.py
src/domain/: entities.py  rules.py  schemas.py
src/infrastructure/: config.py  health.py  metrics_exporter.py  sqlite.py
tests/: conftest.py
tests/integration/: conftest.py  test_broker_flow.py  test_export_flow.py  test_routing_flow.py  test_telegram_flow.py  test_upload_flow.py
tests/unit/: test_admin_commands.py  test_admin_notifier.py  test_bot_command_registry.py  test_chat_exporter.py  test_consumer.py  test_consumer_retry.py  test_domain_entities.py  test_domain_schemas.py  test_event_dispatcher.py  test_metrics.py  (+11 more)
tools/: auth_user.py
(+10 files in other folders)
