[project]
name = "tg-if"
version = "0.1.0"
description = "Broker aimed to be used between the Telegram API and a queue broker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pyrofork>=2.3.69",
    "aio-pika>=9.4.0",
    "aiohttp>=3.10.0",
    "structlog>=25.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
]
