[project]
name = "tg-if"
version = "0.1.0"
description = "Broker aimed to be used between the Telegram API and a queue broker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pyrofork>=2.3.69",
    "aio-pika>=9.4.0",
    "aiohttp>=3.10.0",
    "structlog>=25.1.0",
    "prometheus-client>=0.21.0",
    "tgcrypto>=1.2.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that require Docker (RabbitMQ container)",
]

[tool.mypy]
mypy_path = "src"
strict = true
explicit_package_bases = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0",
    "testcontainers>=4.0.0",
]
